--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"axios": "^0.18.0",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
-		"react-dom": "^16.4.1"
+		"react-dom": "^16.4.1",
+		"react-uid": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.3",
